@@ -5,6 +5,7 @@ import static utils.Constants.Game.TILES_SIZE;
 
 import java.awt.Graphics;
 import java.awt.image.BufferedImage;
+import java.util.Arrays;
 import java.util.List;
 
 import Interaction.Behavior;
@@ -24,14 +25,26 @@ public class Door extends Entity implements Behavior {
         init();
     }
 
+    // public void init() {
+    //     Detector detector = new Detector(
+    //             transform.position.x,
+    //             transform.position.y + TILES_SIZE*0.3f,
+    //             transform.scale.x,
+    //             transform.scale.y*1.7f,
+    //             List.of(EntityType.PLAYER),
+    //             this);
+    //     addComponent(detector);
+    //     img = AssetPool.getBufferedImageList("TrashGame/res/assets/Object/door3.png", 21, 32);
+    // }
     public void init() {
         Detector detector = new Detector(
-                transform.position.x,
-                transform.position.y + TILES_SIZE*0.3f,
-                transform.scale.x,
-                transform.scale.y*1.7f,
-                List.of(EntityType.PLAYER),
-                this);
+            transform.position.x,
+            transform.position.y + TILES_SIZE * 0.3f,
+            transform.scale.x,
+            transform.scale.y * 1.7f,
+            Arrays.asList(EntityType.PLAYER), // Use Arrays.asList for Java versions prior to 9
+            this
+        );
         addComponent(detector);
         img = AssetPool.getBufferedImageList("TrashGame/res/assets/Object/door3.png", 21, 32);
     }
@@ -54,6 +67,12 @@ public class Door extends Entity implements Behavior {
             (int)(21*SCALE), 
             (int)(32*SCALE), 
             null);
+    }
+
+    @Override
+    public void activate(Entity entity) {
+        // TODO Auto-generated method stub
+        throw new UnsupportedOperationException("Unimplemented method 'activate'");
     }
 
 }
