@@ -6,6 +6,7 @@ import static utils.Constants.Game.TILES_SIZE;
 import java.awt.Color;
 import java.awt.Graphics;
 import java.awt.image.BufferedImage;
+import java.util.Arrays;
 import java.util.List;
 
 import Interaction.Behavior;
@@ -33,7 +34,7 @@ public class Button extends Entity implements Behavior{
             (int)this.getTransform().position.y+TILES_SIZE*0.8f, 
             TILES_SIZE*0.8f, 
             TILES_SIZE*0.2f, 
-            List.of(EntityType.PLAYER,EntityType.BOX),
+            Arrays.asList(EntityType.PLAYER,EntityType.BOX),
             this));
         img = AssetPool.getBufferedImageList("TrashGame/res/assets/Object/button.png", 16, 16);
     }
@@ -73,6 +74,12 @@ public class Button extends Entity implements Behavior{
     }
     public boolean isActive(){
         return isActive;
+    }
+
+    @Override
+    public void activate(Entity entity) {
+        // TODO Auto-generated method stub
+        throw new UnsupportedOperationException("Unimplemented method 'activate'");
     }
     
 }
